<resources>
    <string name="app_name">Songle</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_welcome__screen">Welcome_Screen</string>

    <string name="new_game">NEW GAME</string>
    <string name="continue_game">CONTINUE</string>
    <string name="song_selection">SELECT SONG</string>
    <string name="words_found">FOUND WORDS</string>
    <string name="settings">SETTINGS</string>
    <string name="home_title">SONGLE</string>
    <string name="song_player_title">SONG PLAYER</string>
    <string name="song_player_descr">Click on the name of the song to open its Youtube Link.</string>

    <string name="very_easy">VERY EASY </string>
    <string name="very_easy_description">Display all the words on map and they are divided as very interesting, interesting, boring and not boring.</string>
    <string name="easy">EASY </string>
...

    <string name="sure_solve">Are you Sure? No points for given solutions!!!</string>
    <string name="yes_solve_song">Solve Anyway!</string>
    <string name="no_dont_solve_song">Continue Trying.</string>


    <string name="sure_new_game">Game is in Progress!!</string>
    <string name="yes_new_game">New Game!</string>
    <string name="no_new_game">Continue!</string>
    <string name="OK">OK</string>

    <string name="no_wifi"> The game downloads files online. Internet access is required.</string>
    <string name="retry">Retry</string>
    <string name="no_location_near"> Location is enabled!Distance and near mode requires location!</string>


    <string name="wrong_answer"> Wrong Answer. Try Again.</string>

    <string name="sure_hint"> Showing song artist cost 10 points</string>
    <string name="yes_hint"> SHOW</string>
    <string name="no_hint">CANCEL</string>

    <string name="sure_distance"> Location is enabled.
        Distance will not be changed.
        You can continue but distance walked will not be updated.</string>
    <string name="sure_add">Location is enabled.
       You are near mode, distance from marker cannot be calculated without enabling Location.
...
